# NetworkManager-novpn

./: meson.build  nm-novpn-auth-dialog-gui.c  nm-novpn-auth-dialog.c  nm-novpn-editor-plugin.c  nm-novpn-editor.c  nm-novpn-service.c  nm-novpn-service.conf  nm-novpn-service.name.in  nm-novpn.gresource.xml  nm-novpn.ui  run-vpn.c
gtk3/: nm-novpn.ui
gtk4/: nm-novpn.ui
